# serenity

./: Cargo.toml  open_tasks.md  output.ansi  output.txt  package-lock.json  runTilFailure.sh  test.ser  test10.ser  test11.c  test11.ll  test11.ser  test12.ser  test13.ser  test14.ser  test2.ser  test3.ser  test4.ser  test5.ser  test6.ser  test7.ser  test8.ser  test9.ser  tprime_conspiricy.ser  ztring.ser
.github/workflows/: rust.yml
benches/: bench_test.rs
serenity-syntax/: CHANGELOG.md  README.md  package.json  vsc-extension-quickstart.md
serenity-syntax/syntaxes/: serenity.tmLanguage.json
src/: lib.rs  main.rs
src/chunk/: chunk.rs  mod.rs
src/common/: dyn_tracing.rs  mod.rs  runnable.rs
src/compiler/: declarations.rs  expressions.rs  llvm_compiler.rs  mod.rs  parse_table.rs  statements.rs  typechecker.rs
src/end_to_end_tests/: branching_bad.ser  branching_good.ser  closure_hell.ser  cumtrapz.ser  mod.rs  test7.ser
src/lexer/: mod.rs
src/llvm_compiler/: mod.rs
src/parser/: _mod.rs  ast.rs  mod.rs  parse_table.rs
src/prelude/: mod.rs  scoped_map.rs  shared_strings.rs
src/scanner/: mod.rs
src/typing/: closure.rs  custom_struct.rs  hindley_milner.rs  internment.rs  mod.rs  print.rs
src/value/: mod.rs  number.rs  object.rs  pointer.rs  value_type.rs
src/value_literals/: mod.rs
src/vm/: mod.rs
test_files/: highly_composites.ser
tests/: integration_test.rs  interfaces.ser  linkedlist.ser  mod.rs  prime_conspiricy.ser  prime_sieve.ser  test11.ser  test2.ser  test3.ser  test4.ser  test5.ser  test6.ser
tests/snapshots/: integration_test__file_artifacts@test_files__babbage.ser_compile.snap  integration_test__file_artifacts@test_files__babbage.ser_parse.snap  integration_test__file_artifacts@test_files__fib_stream.ser_compile.snap  integration_test__file_artifacts@test_files__generic.ser_compile.snap  integration_test__file_artifacts@test_files__generic.ser_parse.snap  integration_test__file_artifacts@test_files__generic_func.ser_compile.snap  integration_test__file_artifacts@test_files__generic_func.ser_parse.snap  integration_test__file_artifacts@test_files__generic_func.ser_scan.snap  integration_test__file_artifacts@test_files__generic_method.ser_scan.snap  integration_test__file_artifacts@test_files__highly_composites.ser_parse.snap  (+88 more)
tests/test_files/: babbage.ser  fib_stream.ser  (+6 more)
(+198 files in other folders)
