[package]
name = "serenity"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
trie-rs = "0.1"
num_enum = "*"
lazy_static = "*"
pinvec = "0.1.0"
pow_of_2 = "0.1.2"
getopts = "0.2"
tracing = {version = "0.1.40", features = ["release_max_level_off"]}
tracing-subscriber = "0.3.18"
tracing-appender = "0.2.3"
strum = "0.26.3"
strum_macros = "0.26.3"
anyhow = "1.0.86"
enum_dispatch = "0.3.13"
inkwell = { version = "0.5.0", features = ["llvm18-0"] }
indexmap = "1.6.1"
stdio-override = "0.1.3"
filedescriptor = "0.8.2"
gag = "1.0.0"
serial_test = "3.1.1"

[dev-dependencies]
insta = { version = "1.39.0", features = ["yaml", "filters"] }
test-case = "*"

[profile.release]
debug = true

[profile.dev.package]
insta.opt-level = 3
similar.opt-level = 3
