[package]
name = "serenity"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
trie-rs = "0.1"
num_enum = "*"
getopts = "0.2"
tracing = {version = "0.1.40", features = ["release_max_level_off"]}
tracing-subscriber = "0.3.18"
tracing-appender = "0.2.3"
strum = "0.26.3"
strum_macros = "0.26.3"
anyhow = "1.0.86"
inkwell = { version = "0.5.0", features = ["llvm18-0"] }
indexmap = "1.6.1"
arena-alloc = "^0.1.2"

[dev-dependencies]
insta = { version = "1.39.0", features = ["yaml", "filters"] }
test-case = "*"

[profile.release]
debug = true

[profile.dev.package]
insta.opt-level = 3
